test/tests/stages/18_structures/invalid_types/tag_resolution/shadowed_tag_branch_mismatch.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[1]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[3]: 
            CD: 
              CStructDecl: 
                CStructDeclaration: 
                  TIdentifier: s
                  Bool: 0
                  List[1]: 
                    CMemberDeclaration: 
                      TIdentifier: i
                      Int: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: struct1
                  CCompoundInit: 
                    List[1]: 
                      CSingleInit: 
                        CConstant: 
                          CConstInt: 
                            TInt: 1
                          None: 
                        None: 
                    None: 
                  Structure: 
                    TIdentifier: s
                    Bool: 0
                  None: 
            CS: 
              CCompound: 
                CB: 
                  List[3]: 
                    CD: 
                      CStructDecl: 
                        CStructDeclaration: 
                          TIdentifier: s
                          Bool: 0
                          List[1]: 
                            CMemberDeclaration: 
                              TIdentifier: i
                              Int: 
                    CD: 
                      CVarDecl: 
                        CVariableDeclaration: 
                          TIdentifier: struct2
                          CCompoundInit: 
                            List[1]: 
                              CSingleInit: 
                                CConstant: 
                                  CConstInt: 
                                    TInt: 2
                                  None: 
                                None: 
                            None: 
                          Structure: 
                            TIdentifier: s
                            Bool: 0
                          None: 
                    CS: 
                      CExpression: 
                        CCast: 
                          CConditional: 
                            CConstant: 
                              CConstInt: 
                                TInt: 1
                              None: 
                            CVar: 
                              TIdentifier: struct1
                              None: 
                            CVar: 
                              TIdentifier: struct2
                              None: 
                            None: 
                          Void: 
                          None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
